fix: bordes y estilo

--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -2,3 +2,9 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+//<style lang="scss">
+
+html, body {
+  margin: 0px !important;
+  padding: 0px !important;
+}
